force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Software_Type__c.field-meta.xml
<CustomField>
    <fullName>Software_Type__c</fullName>
    <description>DCP-8632 - To select the Software Type.</description>
    <label>Software Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New - Subscription On Premise</fullName>
            </value>
            <value>
                <fullName>New - Subscription - Hosted</fullName>
            </value>
            <value>
                <fullName>New - Perpetual</fullName>
            </value>
            <value>
                <fullName>Renewal - Maintenance</fullName>
            </value>
            <value>
                <fullName>Renewal - Subscription Hosted</fullName>
            </value>
            <value>
                <fullName>Renewal - Subscription On Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>