force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Sold_To_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Distribution_Channel__c</fullName>
    <description>This field specify Sold To Distribution Channel.</description>
    <formula>Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Sold_To_Distribution_Channel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To Distribution Channel</label>
    <type>Text</type>
</CustomField>