force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Sold_To_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Sales_Organization__c</fullName>
    <description>This field specifies Sold To Sales Organization.</description>
    <formula>Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Sold_To_Sales_Organization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To Sales Organization</label>
    <type>Text</type>
</CustomField>