force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Stacked_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stacked_Discount_Amount__c</fullName>
    <description>This field specify Stacked Discount Amount.</description>
    <label>Stacked Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>