force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Stacked_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Stacked_Discount_Percentage__c</fullName>
    <description>This field specify Stacked Discount Percentage.</description>
    <label>Stacked Discount Percentage</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>