force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Submitter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Notes__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Line item comments visible to CPQ Cart Users and CPQ Approvers</description>
    <inlineHelpText>Optional line item details visible to CPQ Approvers</inlineHelpText>
    <label>Submitter Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>