force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Subscription_Duration__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Duration__c</fullName>
    <description>This field is used specify Subscription Duration.</description>
    <label>Subscription Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>