force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Template_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Template_Term_Months__c</fullName>
    <description>This field is used to specify template term in month.</description>
    <formula>IF (
AND (
TEXT ( Apttus_Config2__LineStatus__c ) = $Label.LineItemLineStatusNew,
TEXT ( Apttus_Config2__PriceType__c ) = $Label.PriceListItemPriceTypeOneTime
),
NULL,
( Apttus_Config2__SellingTerm__c )*12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Term(Months)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>