force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Total_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Amount__c</fullName>
    <description>This will capture the stacked discount amount returned from SAP.</description>
    <label>Total Discount Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>