force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Total_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Percentage__c</fullName>
    <description>This field provides total discount percentage.</description>
    <label>Total Discount %</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>