force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Total_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price__c</fullName>
    <description>Thid field gives total list price for an item.</description>
    <label>Total List Price</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>