force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Trade_In_Type__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Type__c</fullName>
    <label>Trade-In Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trade_In_Type_Values</valueSetName>
    </valueSet>
</CustomField>