force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Ultimate_Consignee_Region__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee_Region__c</fullName>
    <description>This is a formula field created to capture Ultimate Consignee Region of the Quote. This is used in Constraint Rule criteria</description>
    <formula>Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Region_Ultimate_Consignee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Consignee Region</label>
    <type>Text</type>
</CustomField>