force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Unit_Price_Local__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Local__c</fullName>
    <description>Unit Price in local currency</description>
    <label>Unit Price (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>