force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Volume_Discount__c.field-meta.xml
<CustomField>
    <fullName>Volume_Discount__c</fullName>
    <description>This field specify volume discount given for an item.</description>
    <label>Volume Discount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>