force-app/main/default/objects/Apttus_Config2__LineItem__c/validationRules/CheckBillingFrequencyNotEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckBillingFrequencyNotEditable</fullName>
    <active>true</active>
    <description>Prevents user from modifying Billing Frequency  for non-subscription products.</description>
    <errorConditionFormula>AND (    
    NOT (
        ISBLANK ( TEXT ( Apttus_Config2__BillingFrequency__c) )
    ), 
    ISCHANGED( Apttus_Config2__BillingFrequency__c ),
    TEXT ( Apttus_Config2__LineStatus__c ) = $Label.LineItemLineStatusNew,
    TEXT ( Apttus_Config2__PriceListItemId__r.Apttus_Config2__PriceType__c ) = $Label.PriceListItemPriceTypeOneTime,
    OR (
        TEXT ( Apttus_Config2__ProductId__r.Material_Class__c ) = $Label.InstalledProductMaterialClassInstrument,
        TEXT ( Apttus_Config2__ProductId__r.Material_Class__c ) = $Label.ProductMaterialClassConsumables,
        TEXT ( Apttus_Config2__ProductId__r.Material_Class__c ) = $Label.ProductMaterialClassDocumentTraining        
    )
)</errorConditionFormula>
    <errorMessage>Billing Frequency cannot be edited.</errorMessage>
</ValidationRule>