force-app/main/default/objects/Apttus_Config2__LineItem__c/validationRules/CheckBillingTypeNotEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckBillingTypeNotEditable</fullName>
    <active>true</active>
    <description>Prevents user from modifying Billing Type for non-subscription products</description>
    <errorConditionFormula>AND (
    ISCHANGED( Billing_Type__c ),
    TEXT ( Apttus_Config2__LineStatus__c ) = $Label.LineItemLineStatusNew,
    TEXT ( Apttus_Config2__PriceListItemId__r.Apttus_Config2__PriceType__c ) = $Label.PriceListItemPriceTypeOneTime,
    OR (
        TEXT ( Apttus_Config2__ProductId__r.Material_Class__c ) = $Label.InstalledProductMaterialClassInstrument,
        TEXT ( Apttus_Config2__ProductId__r.Material_Class__c ) = $Label.ProductMaterialClassConsumables,
        TEXT ( Apttus_Config2__ProductId__r.Material_Class__c ) = $Label.ProductMaterialClassDocumentTraining        
    )
)</errorConditionFormula>
    <errorMessage>Billing Type cannot be edited.</errorMessage>
</ValidationRule>