force-app/main/default/objects/Apttus_Config2__LineItem__c/validationRules/CheckEquipmentIdPreventSerialNoChange.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEquipmentIdPreventSerialNoChange</fullName>
    <active>true</active>
    <description>If Equipment Id is present then Serial number should not be edit when renewing.</description>
    <errorConditionFormula>AND (
    NOT ( 
        ISBLANK ( Equipment_Id__c ) 
    ),
    PRIORVALUE ( Serial_Number__c ) != Serial_Number__c
)</errorConditionFormula>
    <errorMessage>Searial Number can not be edited.</errorMessage>
</ValidationRule>